Fix - interface display overflow (#73)

--- a/interface/style/main.scss
+++ b/interface/style/main.scss
@@ -12,6 +12,7 @@ body, html {
   display: grid;
   overflow: hidden;
   grid-template-columns: 80% 20%;
+  max-height: 100vh;
 }
 
 canvas {
@@ -33,11 +34,17 @@ canvas {
 .sidebar-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
+  padding-right: 4px;
 
   padding-bottom: 48px;
   padding-top: 32px;
+
+  display: grid;
+  grid-template-rows: auto 1fr;
+  place-items: center;
+  gap: 32px;
+  overflow: auto;
 }
 
 .modal {
@@ -78,6 +85,12 @@ canvas {
   grid-template-columns: repeat(auto-fill, minmax(297px, 1fr));
   grid-gap: 24px;
   align-items: stretch;
+}
+
+.grid-item {
+  display: flex;
+  justify-items: center;
+  align-items: center;
 }
 
 @media only screen and (max-width: 600px) {
@@ -146,6 +159,9 @@ canvas {
   width: calc(100% - 16px);
   border: 1px solid #192E47;
   margin-top: 15px;
+  max-height: 100%;
+  overflow: auto;
+  
 }
 
 .score {
